# soyut

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml
soyut/: __init__.py  constants.py  utils.py
soyut/backend/: __init__.py
soyut/frontend/: BAxe.py  BFigure.py  BLayout.py  GPlottable.py  GraphicSpec.py  Plottable.py
tests/: coverage.conf  test_plot.py
