[build-system]
requires = ["pdm-backend>=2.0.6,<3.0.0", "setuptools>=68"]
build-backend = "pdm.backend"

[project]
name = "soyut"
dynamic = ["version"]
description = "Abstraction layer of plotting libraries in python"
authors = [
    { name = "Yann de Thé", email = "ydethe@gmail.com" },
]
keywords = [
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Win32 (MS Windows)",
    "License :: Other/Proprietary License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy>=1.21,<2.0",
    "plotly>=5.18.0",
    "rich>=13.3,<14.0",
    "cartopy~=0.21.0",
    "pandas~=1.4.0",
    "networkx~=2.8",
    "matplotlib>=3.7.4",
]
requires-python = ">=3.8,<3.11"

[project.urls]
"Bug Tracker" = "https://github.com/ydethe/soyut/issues"
Homepage = "https://github.com/ydethe/soyut"
Source = "https://github.com/ydethe/soyut"

[tool.pylint.format]
max-line-length = 100

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
    "--html=htmldoc/tests/report.html",
    "--self-contained-html",
    "--junitxml=htmldoc/junit.xml",
    "--cov-config=tests/coverage.conf",
    "--cov=soyut",
    "--doctest-modules",
    "--mpl",
    "--mpl-generate-summary=html",
    "--mpl-results-always",
    "--mpl-baseline-path=tests/baseline",
    "--mpl-results-path=htmldoc/tests/results"
]
testpaths = [
    "tests/",
]

[tool.pdm.version]
source = "scm"

[tool.pdm.build]
run-setuptools = true
includes = [
    "soyut/",
]
excludes = [
    "tests",
    "build",
    "dev",
    "dist",
]

[tool.pdm.dev-dependencies]
dev = [
    "coverage-badge>=1.1.0",
    "docstr-coverage>=2.2.0",
    "ipython>=7.23.1",
    "pre-commit",
    "snakeviz>=2.1.2",
]
maintain = [
    "black==22.3.0",
    "blacken-docs==1.12.1",
    "git-changelog>=1.0",
]
quality = [
    "mypy>=1.2.0",
    "ruff>=0.0.246",
]
doc = [
    "pdoc3>=0.10.0",
    "pylint>=2.15.3",
]
test = [
    "pytest>=7.1.3",
    "pytest-cov>=3.0.0",
    "pytest-mock>=3.8.2",
    "pytest-instafail>=0.4.2",
    "pytest-mpl>=0.16.1",
    "pytest-order>=1.0.1",
    "pytest-picked>=0.4.6",
    "pytest-sugar>=0.9.5",
    "pytest-html>=3.1.1",
]

[tool.pdm.scripts]
site_packages = true
doc.shell = """\
    mkdir -p htmldoc/soyut
    pdoc --html --force --config latex_math=True -o htmldoc soyut
    coverage html -d htmldoc/coverage --rcfile tests/coverage.conf
    docstr-coverage soyut -miP -sp -is -idel --skip-file-doc --badge=htmldoc/soyut/doc_badge.svg
    coverage-badge -f -o htmldoc/soyut/cov_badge.svg
"""
baseline.shell = "pytest --mpl-generate-path=tests/baseline tests"
serve = "python3 -m http.server 10123 -d htmldoc"
